--- a/module_5/FileWatcher/ConsoleApp1/App.config
+++ b/module_5/FileWatcher/ConsoleApp1/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <section name ="simpleSection"  type ="ConsoleApp1.SimpleConfigurationSection, ConsoleApp1" />
+    <section name ="watcherSection"  type ="ConsoleApp1.WatcherConfigurationSection, ConsoleApp1" />
   </configSections>
 
   
@@ -9,8 +9,8 @@
   <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-  <simpleSection appName="My App">
-    <culture culture ="en"/>
+  <watcherSection appName="My App">
+    <culture culture ="ru-Ru"/>
     <defaultFolder path="C:\Users\Dzmitry_Khileuski\Desktop\temp\MENTORING\dest\default\"/>
     <folders>
       <add path="C:\Users\Dzmitry_Khileuski\Desktop\temp\MENTORING\source\1"/>
@@ -23,6 +23,6 @@
       <add name=".bmp" folder="C:\Users\Dzmitry_Khileuski\Desktop\temp\MENTORING\dest\bmp" isAddDate ="true"/>
       <add name=".rtf" folder="C:\Users\Dzmitry_Khileuski\Desktop\temp\MENTORING\dest\rtf" isAddDate="true" isAddNumber ="true"/>
     </rules>
-  </simpleSection>
+  </watcherSection>
   
 </configuration>
