scaffolding database first, add Layout Services

--- a/module_7/NorthwindSite/NorthwindSite/appsettings.json
+++ b/module_7/NorthwindSite/NorthwindSite/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "RazorPagesMovieContext": "Data Source=EPBYGROW0409;Initial Catalog=Northwind;Connection Timeout=60;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
