--- a/module_7/NorthwindSite/Northwind.Data/Northwind.Data.csproj
+++ b/module_7/NorthwindSite/Northwind.Data/Northwind.Data.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,11 +10,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Northwind.Data\Northwind.Data.csproj" />
-    <ProjectReference Include="..\Nothwind.Services\Nothwind.Services.csproj" />
   </ItemGroup>
 
 </Project>
