Add pagination for Products Page

--- a/module_7/NorthwindSite/NorthwindSite/appsettings.json
+++ b/module_7/NorthwindSite/NorthwindSite/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "RazorPagesMovieContext": "Data Source=EPBYGROW0409;Initial Catalog=Northwind;Connection Timeout=60;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "NorthwindContext": "Data Source=EPBYGROW0409;Initial Catalog=Northwind;Connection Timeout=60;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
