--- a/module_7/NorthwindSite/NorthwindSite/appsettings.json
+++ b/module_7/NorthwindSite/NorthwindSite/appsettings.json
@@ -10,5 +10,6 @@
 
   "ConnectionStrings": {
     "NorthwindContext": "Data Source=EPBYGROW0409;Initial Catalog=Northwind;Connection Timeout=60;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "PageSize": "10"
 }
