--- a/module_7/NorthwindSite/NorthwindSite/NorthwindSite.csproj
+++ b/module_7/NorthwindSite/NorthwindSite/NorthwindSite.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
       <PrivateAssets>all</PrivateAssets>
@@ -16,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Northwind.Data\Northwind.Data.csproj" />
+    <ProjectReference Include="..\Northwind.Infrastructure\Northwind.Infrastructure.csproj" />
     <ProjectReference Include="..\Nothwind.Services\Nothwind.Services.csproj" />
   </ItemGroup>
 
